--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- meta for PWA -->
+    <!-- meta for PWA Android-->
     <meta name="theme-color" content="#41b883">
+    <!-- meta for PWA Android-->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- default || black || black-translucent-->
     <!-- SEO -->
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
+
+    <!--favicon-->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
     <title>Testing VUE</title>
     <script src="https://unpkg.com/vue@next"></script>
