--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <meta name="theme-color" content="#41b883">
     <!-- meta for PWA Android-->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- default || black || black-translucent-->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- default || black || black-translucent-->
     <!-- SEO -->
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
 
-    <!--favicon-->
+    <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/favicon.png" type="image/png">
 
+    <!-- manifest -->
+    <link rel="manifest" href="js/manifest.json">
+
+    <link rel="apple-touch-startup-image" href="img/favicon.png" type="image/png">
     <title>Testing VUE</title>
     <script src="https://unpkg.com/vue@next"></script>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
@@ -35,6 +41,6 @@
         <button @click="sum('negative', 3)" class="buttons">Decrease</button>
     </div>
 </div>
-<script src="./main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
