service worker OK

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <link rel="apple-touch-icon" href="img/favicon.png" type="image/png">
 
     <!-- manifest -->
-    <link rel="manifest" href="js/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
+    <!-- service worker -->
+    <script src="js/load.js"></script>
     <link rel="apple-touch-startup-image" href="img/favicon.png" type="image/png">
     <title>Testing VUE</title>
     <script src="https://unpkg.com/vue@next"></script>
