--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="img/favicon.png" type="image/png">
 
     <!-- manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="app.webmanifest">
 
     <!-- service worker -->
     <script src="js/load.js"></script>
