--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <hr/>
     <div>
-        <button onclick="install()">Install</button>
+        <button onclick="install()" id="install">Install</button>
     </div>
 </div>
 <script src="js/main.js"></script>
