trying to install

--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Testing VUE</title>
     <meta charset="UTF-8">
-    <!-- meta for PWA Android-->
     <meta name="theme-color" content="#41b883">
-    <!-- meta for PWA Android-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <!-- default || black || black-translucent-->
-    <!-- SEO -->
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
-
-    <!-- favicon -->
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="img/favicon.png" type="image/png">
-
-    <!-- apple -->
-    <link rel="apple-touch-startup-image" href="img/favicon.png" type="image/png">
-
-    <!-- manifest -->
-    <link rel="manifest" href="app.webmanifest">
-
-    <!-- service worker -->
-    <script src="js/load.js"></script>
-
-    <title>Testing VUE</title>
-    <script src="https://unpkg.com/vue@next"></script>
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/favicon.png" type="image/png">
+    <link rel="apple-touch-startup-image" href="img/favicon.png" type="image/png">
+    <script src="js/load.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
 
