trying to install

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="img/favicon.png" type="image/png">
-    <link rel="apple-touch-startup-image" href="img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="icons/favicon.png" type="image/png">
+    <link rel="apple-touch-startup-image" href="icons/favicon.png" type="image/png">
     <script src="js/load.js"></script>
     <script src="https://unpkg.com/vue@next"></script>
 </head>
