trying to install

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <script src="js/main.js"></script>
 
 <div class="app">
-    <button onclick="install()" id="install">Install</button>
+    <button id="btnAdd" onclick="install()">Install</button>
 </div>
 </body>
 </html>
